tests/paczka2/big_fuzzy/86008656.err
Error in line 1: A810 S517 82,4
Error in line 10: n8xUsoI S517 64,9
Error in line 29: pWau3I6cMt A68 35,8
Error in line 32: sDF5 S248 6,3
Error in line 34: beO A68 120,3
Error in line 41: sDF5 S248 12,3
Error in line 39: n8xUsoI A68 87,9
Error in line 77: sDF5 S517 74,2
Error in line 79: sDF5 A68 65,9
Error in line 88: n8xUsoI S248 57,7
Error in line 106: sDF5 A68 27,8
Error in line 107: beO A810 79,4
Error in line 122: n8xUsoI A810 18,23
Error in line 123: JepVe S517 21,6
Error in line 112: pWau3I6cMt A810 76,0
Error in line 138: JepVe S248 72,46
Error in line 135: n8xUsoI A810 24,7
Error in line 151: A810 S517 49,29
Error in line 152: A810 S517 240,5
Error in line 143: fNJRdvcB A810 29,3
Error in line 155: A810 A810 52,6
Error in line 167: beO A810 93,8
Error in line 187: sDF5 A810 391,1
Error in line 196: pWau3I6cMt S517 13,8
Error in line 200: pWau3I6cMt A810 14,6
Error in line 205: beO S248 77,8
Error in line 218: n8xUsoI A68 71,87
Error in line 210: n8xUsoI A810 45,4
Error in line 227: beO A810 3,2
Error in line 220: n8xUsoI A68 53,1
Error in line 233: n8xUsoI S248 56,9
Error in line 240: n8xUsoI S517 87,37
Error in line 236: n8xUsoI S517 46,5
Error in line 242: fNJRdvcB S248 9,1
Error in line 238: A810 S248 311,5
Error in line 245: fNJRdvcB A810 21,9
